--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
     "test": "NODE_ENV=test jest -i"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
@@ -21,6 +22,7 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/nodemailer": "^6.4.0",
